--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
     />
 
-    <title>Devnexus CA</title>
+    <title>Nexus CA</title>
   </head>
   <body>
     <div id="root"></div>
